# ai-hiring-assistant

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
apps/agent-backend/: Dockerfile  moon.yml  pyproject.toml
apps/agent-backend/alembic/: env.py
apps/agent-backend/alembic/versions/: 39e52c0f30ee_resume_analyses.py  6938e67d6675_initial_tables.py  7615f85ec3a7_add_report_tables.py  7c6d8e2e0ad6_add_interview_notes_text_to_applications.py  d23279a40eaf_candidate_matches.py  e032cc4c350e_resume_upload_redesign.py  eb9531cad75d_user_invite_fields.py  fae179dec35e_chat_tables.py
apps/agent-backend/app/: main.py
apps/agent-backend/app/core/: config.py  deps.py  security.py
apps/agent-backend/app/db/: session.py
apps/agent-backend/app/modules/applications/: models.py  routes.py  schemas.py  service.py
apps/agent-backend/app/modules/auth/: models.py  routes.py  schemas.py  service.py
apps/agent-backend/app/scripts/: seed_user.py
apps/agent-backend/app/worker/: celery_app.py  tasks.py
apps/rag-backend/: Dockerfile  moon.yml  pyproject.toml
apps/rag-backend/app/: knowledge.py  main.py
apps/rag-backend/app/agents/: candidate_matching.py  chat_orchestrator.py  report.py  resume_analysis.py  shortlisting.py
apps/rag-backend/app/api/: candidate_matching.py  chat.py  extract_text.py  report.py  resume_analysis.py  resume_embed.py  shortlisting.py
apps/rag-backend/app/core/: config.py
apps/rag-backend/app/parsing/: extract_text.py
apps/rag-backend/app/tools/: chat_context.py
(+89 files in other folders)
