[project]
name = "agent-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43.46",
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]
